<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/register_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/register_padding_layout"
        android:background="@drawable/dragradado_main">

        <ImageView
            android:id="@+id/back_register"
            android:layout_width="@dimen/register_back_image_width_heigth"
            android:layout_height="@dimen/register_back_image_width_heigth"
            android:background="@drawable/baseline_arrow_back_24"
            android:layout_centerHorizontal="false"
            android:backgroundTint="@color/dark_blue"/>

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/register_title_margintop"
            android:layout_below="@id/back_register"
            android:textSize="@dimen/register_title_textsize"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/txtNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/register_edittext_margintop"
            android:padding="@dimen/register_edittext_padding"
            android:background="@color/nomuch_white"
            android:hint="@string/register_hint_names"
            android:inputType="text"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="@dimen/register_edittext_drawable_padding"
            android:drawableTint="@color/light_blue"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue" />

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNombres"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/register_edittext_margintop"
            android:padding="@dimen/login_edittext_padding"
            android:background="@color/nomuch_white"
            android:hint="@string/register_last_names"
            android:inputType="text"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="@dimen/register_edittext_drawable_padding"
            android:drawableTint="@color/light_blue"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue" />

        <EditText
            android:id="@+id/txtDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtApellidos"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/register_edittext_margintop"
            android:padding="@dimen/register_edittext_padding"
            android:background="@color/nomuch_white"
            android:hint="@string/register_hint_dni"
            android:inputType="number"
            android:drawableLeft="@drawable/baseline_credit_card_24"
            android:drawablePadding="@dimen/register_edittext_drawable_padding"
            android:drawableTint="@color/light_blue"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDni"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/register_edittext_margintop"
            android:padding="@dimen/register_edittext_padding"
            android:background="@color/nomuch_white"
            android:hint="@string/register_hint_email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/baseline_alternate_email_24"
            android:drawablePadding="@dimen/register_edittext_drawable_padding"
            android:drawableTint="@color/light_blue"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/register_edittext_margintop"
            android:padding="@dimen/register_edittext_padding"
            android:background="@color/nomuch_white"
            android:hint="@string/register_pass_title"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/baseline_shield_24"
            android:drawablePadding="@dimen/register_edittext_drawable_padding"
            android:drawableTint="@color/light_blue"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue" />

        <EditText
            android:id="@+id/txtPassRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/register_edittext_margintop"
            android:padding="@dimen/register_edittext_padding"
            android:background="@color/nomuch_white"
            android:hint="@string/register_pass_repeat"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/baseline_shield_24"
            android:drawablePadding="@dimen/register_edittext_drawable_padding"
            android:drawableTint="@color/light_blue"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPassRepeat"
            android:layout_centerHorizontal="true"
            android:text="@string/register_button_continue"
            android:layout_marginTop="@dimen/register_edittext_margintop"
            android:padding="15dp"
            android:backgroundTint="@color/dark_blue"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>